--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,9 @@
 {
+  "env": {
+    "node": true
+  },
   "extends": "airbnb-base",
-  "allow": ["_id"]
+  "rules": {
+    "no-underscore-dangle": "off"
+  }
 }
