--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Vera Udodova",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
     "mongoose": "^7.0.4"
   },
