--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
-    "mongoose": "^7.0.4"
+    "mongoose": "^7.0.4",
+    "validator": "^13.9.0"
   },
   "devDependencies": {
     "eslint": "^8.38.0",
